[package]
name = "tethys-sim-rs"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "tethys_core_allocation"
path = "src/main.rs"


[[bin]]
name = "tethys_dyn_allocation"
path = "src/dyn_runner.rs"



[dependencies]
rand = "^0.7.0"
indicatif = "0.11.0"
rayon = "^1.1.0"
gnuplot = "^0.0.31"
serde={ version = "1", features = ["derive"] }
serde_json = "1.0"

csv = "1.1"

structopt = { version = "0.2", default-features = false }
