[package]
name = "tethys-sim-rs"
version = "0.1.0"
authors = ["Raphael Bost <raphael_bost@alumni.brown.edu>"]
edition = "2018"
license = "MIT"

[[bin]]
name = "tethys_core_allocation"
path = "src/main.rs"



[dependencies]
rand = "^0.7.0"
indicatif = "0.11.0"
rayon = "^1.1.0"
serde={ version = "1", features = ["derive"] }
serde_json = "1.0"

csv = "1.1"

structopt = { version = "0.2", default-features = false }
